--- a/pom.xml
+++ b/pom.xml
@@ -57,5 +57,11 @@
             <artifactId>tika-parsers</artifactId>
             <version>1.19.1</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
